<resources>
    <string name="app_name">Sneezy</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="pollenCountTitle">Pollen forecast for</string>
    <string name="pollenLocationText">Adelaide, SA</string>
    <string name="pollenLocationIncorrect">Not your Location?</string>
    <string name="pollenChangeLocation">Change Location</string>
    <string name="weekAhead">Your week ahead</string>
    <string name="indexText">Index</string>
    <string name="pollenCountExtreme">EXTREME</string>
    <string name="pollenCountVHigh">VHIGH</string>
    <string name="pollenCountHigh">HIGH</string>
    <string name="pollenCountModerate">MED</string>
    <string name="pollenCountLow">LOW</string>
    <string name="sneeze">SNEEZE</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="homeMonday">MON</string>
    <string name="homeTuesday">TUES</string>
    <string name="homeWednesday">WED</string>
    <string name="homeThursday">THUR</string>
    <string name="homeFriday">FRI</string>
    <string name="homeSaturday">SAT</string>
    <string name="homeSunday">SUN</string>
    <string name="sneezeDetail">Youve sneezed 1 times today</string>
    <string name="stitch_client_app_id">sneezyapp-vfmmi</string>
    <string name="google_web_client_id">1045273968584-ko38ka6og4qp6ithoo3fcnmbvg2aueph.apps.googleusercontent.com</string>
    <string name="gcp_api_key">AIzaSyA2sd7VDUwn66-HuLcV5ej4LbSGHreTBMo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_location_permission">Request Location Permissions</string>
    <string name="text_location_permission">Sneezy would like to use your location data to track locations of your sneezes. This feature is optional and can be disabled at any time.</string>
    <string name="ok">OK</string>
    <string name="darkMode">Dark Mode</string>
    <string name="settingsTitle">Settings</string>
    <string name="appRestartReminder">App will require restart to apply above settings</string>
    <string name="restartButtonText">RESTART</string>
    <string name="homeNavText">Home</string>
    <string name="mapsNavText">Maps</string>
    <string name="graphNavText">Graph</string>
    <string name="statsNavText">Statistics</string>
    <string name="settingsNavText">Settings</string>
    <string name="aboutNavText">About</string>
    <string name="logoutNavText">Logout</string>
    <string name="rateUsNavText">Rate Us</string>
    <string name="sneezyNavHeader">Sneezy</string>
    <string name="changlogNavText">Change Log</string>
    <string name="reportNavText">Report Bugs</string>
    <string name="aboutUs">We are a group of students based in Adelaide, South Australia. Currently studying Software development and this is the project we decided to work on for around 6 months.
        We are looking to continue working on this project by making a website which will display similar, more in depth data shown in this app.</string>
    <string name="aboutUsTitle">About Us</string>
    <string name="changeLogTitle">Change Log</string>
    <string name="ver.1.0">Version 1.0</string>
    <string name="ver.1.0Text">Initial Release</string>
    <string name="ver.1.1">Version 1.1</string>
    <string name="ver.1.1Text">Various bug fixes\nMap functionality\nPollen index explanations</string>
    <string name="ver.1.2">Version 1.2</string>
    <string name="ver.1.2Text">Weekly graphs details\nAdded map menu\n- User only view\n- Week/Month view\n- Markers view</string>
    <string name="index_breakdown">INDEX BREAKDOWN</string>
    <string name="index_details_extreme_header">EXTREME</string>
    <string name="index_details_extreme">Most sufferers of pollen allergies will experience symptoms on extreme pollen level days. Symptoms may be severe in some sufferers.
        These days typically occur as a result of high temperatures and/or dry, hot winds, so the best precaution is to stay indoors.</string>
    <string name="index_details_very_high_header">VERY HIGH</string>
    <string name="index_details_very_high">Most sufferers of pollen allergies will experience symptoms on very high pollen level days.
        These days are typically warm and dry so the best precaution is to stay indoors away from sources of pollen.</string>
    <string name="index_details_high_header">HIGH</string>
    <string name="index_details_high">Some sufferers of pollen allergies will experience symptoms on high pollen level days, but these are unlikely to be severe.
        Temperatures are likely to be warm on these days, but there may be a limiting factor such as rain or sea breezes.</string>
    <string name="index_details_moderate_header">MODERATE</string>
    <string name="index_details_moderate">A few sufferers of pollen allergies may experience symptoms on moderate pollen level days.
        These are typically cooler days or days on which rain is expected to "flush" the pollen out of the air.</string>
    <string name="index_details_low_header">LOW</string>
    <string name="index_details_low">Very few sufferers of pollen allergies would be expected to experience symptoms on low pollen level days.
        These are typically either cold or wet days when there is likely to be little pollen released into the atmosphere.</string>
    <string name="forecast_source">weatherzone</string>
    <string name="popup_header">Select a city</string>
    <string name="radio_adelaide">Adelaide</string>
    <string name="radio_brisbane">Brisbane</string>
    <string name="radio_canberra">Canberra</string>
    <string name="radio_sydney">Sydney</string>
    <string name="radio_melbourne">Melbourne</string>
    <string name="radio_hobart">Hobart</string>
    <string name="radio_perth">Perth</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="forecastBackgroundDescription">Block background is the colour of the foretasted value for the day</string>
    <string name="policyTitle">Privacy Policy</string>
    <string name="firstBlurb">Sneezy Team built the Sneezy app as an Open Source app. This SERVICE is provided by the Sneezy Team at no cost and is intended for use as is.
This page is used to inform visitors regarding the policies with the collection, use, and disclosure of Personal Information if anyone decided to use this Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.<br /><br />
</string>
    <string name="InfoCollectTitle">Information Collection and Use</string>
    <string name="InfoCollectBlurb">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to location data. The information that we request will be stored remotely on our database server. While we recognize that location data may be sensitive, this data is not uniquely identifiable, as this is the only personal data we collect.
The app does use third party services that may collect information used to identify you.
Links to privacy policy of third party service providers used by the app:<br /><br />
</string>
    <string name="googleLink"><a href="https://policies.google.com/privacy">Google Play Services</a></string>
    <string name="logDataTitle">Log Data</string>
    <string name="logDataBlurb">We want to inform you that whenever you use our Service, in the case of an error, we may collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.<br /><br /></string>
    <string name="cookiesTitle">Cookies</string>
    <string name="cookiesBlurb">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.<br /><br /></string>
    <string name="servicesTitle">Service Providers</string>
    <string name="servicesBlurb">We may employ third-party companies and individuals due to the following reasons:<br />
</string>
    <string name="servicesPoint1">•To facilitate our Service</string>
    <string name="servicesPoint2">•To provide the Service on our behalf</string>
    <string name="servicesPoint3">•To perform Service-related services or</string>
    <string name="servicesPoint4">•To assist us in analyzing how our Service is used.</string>
    <string name="servicesPoint5">I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="securityTitle">Security</string>
    <string name="securityBlurb">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.<br /><br /></string>
    <string name="linksTitle">Links to Other Sites</string>
    <string name="linksBlurb">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.<br /><br /></string>
    <string name="changesPolicyTitle">Changes to This Privacy Policy</string>
    <string name="changesPolicyBlurb">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
This policy is effective as of 2020-08-13<br /><br /></string>
    <string name="contactUsTitle">Contact Us</string>
    <string name="contactUsBlurb">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact us at sneezyapp@gmail.com<br /><br /></string>
    <string name="txt_time_frame">Time Frame</string>
    <string name="txt_user_scope">Users</string>
    <string name="txt_map_presentation">Presentation</string>
    <string name="radio_week">Week</string>
</resources>