<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/setLocationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_header"
            android:textSize="20sp"/>
        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical">-->
        <RadioGroup
            android:id="@+id/radioGCities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radioAdelaide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_adelaide"/>
            <RadioButton
                android:id="@+id/radioBrisbane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_brisbane"/>
            <RadioButton
                android:id="@+id/radioCanberra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_canberra"/>
            <RadioButton
                android:id="@+id/radioHobart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_hobart"/>
            <RadioButton
                android:id="@+id/radioMelbourne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_melbourne"/>
            <RadioButton
                android:id="@+id/radioPerth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_perth"/>
            <RadioButton
                android:id="@+id/radioSydney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sydney"/>
        </RadioGroup>

        <!--        </LinearLayout>-->

        <Button
            android:id="@+id/locationSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>