<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundMainColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/sectionColor"
        android:padding="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/btn_index_popup_close"
                android:layout_centerHorizontal="true"
                android:text="@string/index_breakdown"
                android:textColor="?attr/mainText"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_index_popup_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/statelist_normal_button"
                android:text="✕"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="?attr/mainText"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/indexBreakdownScrollview"
            android:paddingBottom="15dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/mainText"
                    android:backgroundTint="@color/extremeColour"
                    android:textSize="16sp"
                    android:text="@string/index_details_extreme_header"
                    android:inputType="none"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="-5dp"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/index_details_extreme"
                    android:textColor="?attr/mainText"
                    android:paddingStart="10dp"
                    android:justificationMode="inter_word"
                    android:paddingEnd="10dp"
                />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/mainText"
                    android:backgroundTint="@color/vHighColour"
                    android:textSize="16sp"
                    android:text="@string/index_details_very_high_header"
                    android:inputType="none"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="-5dp"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/index_details_very_high"
                    android:textColor="?attr/mainText"
                    android:paddingStart="10dp"
                    android:justificationMode="inter_word"
                    android:paddingEnd="10dp"
                />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/mainText"
                    android:backgroundTint="@color/highColour"
                    android:textSize="16sp"
                    android:text="@string/index_details_high_header"
                    android:inputType="none"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="-5dp"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/index_details_high"
                    android:textColor="?attr/mainText"
                    android:paddingStart="10dp"
                    android:justificationMode="inter_word"
                    android:paddingEnd="10dp"
                />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/mainText"
                    android:backgroundTint="@color/moderateColour"
                    android:textSize="16sp"
                    android:text="@string/index_details_moderate_header"
                    android:inputType="none"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="-5dp"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/index_details_moderate"
                    android:textColor="?attr/mainText"
                    android:paddingStart="10dp"
                    android:justificationMode="inter_word"
                    android:paddingEnd="10dp"
                />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/mainText"
                    android:backgroundTint="@color/lowColour"
                    android:textSize="16sp"
                    android:text="@string/index_details_low_header"
                    android:inputType="none"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="-5dp"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/index_details_low"
                    android:textColor="?attr/mainText"
                    android:paddingStart="10dp"
                    android:justificationMode="inter_word"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="15dp"
                />
                <ImageButton
                    android:id="@+id/weatherzoneImg"
                    android:layout_width="80dp"
                    android:layout_height="17dp"
                    />
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>